// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Code output renders correctly 1`] = `
<Output
  output={
    {
      "type": "code",
      "value": "display('');",
    }
  }
/>
`;

exports[`Empty output renders an empty card 1`] = `
<Output
  output={{}}
/>
`;

exports[`Error output (no consoleLogs) renders correctly 1`] = `
<Output
  output={
    {
      "consoleLogs": [],
      "errors": [
        TypeError {
          "chapter": 4,
          "expected": "",
          "got": "",
          "location": {
            "end": {
              "column": -1,
              "line": -1,
            },
            "start": {
              "column": -1,
              "line": -1,
            },
          },
          "severity": "Error",
          "side": "",
          "type": "Runtime",
        },
      ],
      "type": "errors",
    }
  }
/>
`;

exports[`Error output (with consoleLogs) renders correctly 1`] = `
<Output
  output={
    {
      "consoleLogs": [
        "a",
        "bb",
        "cccccccccccccccccccccccccccccccc",
        "d",
      ],
      "errors": [
        TypeError {
          "chapter": 4,
          "expected": "",
          "got": "",
          "location": {
            "end": {
              "column": -1,
              "line": -1,
            },
            "start": {
              "column": -1,
              "line": -1,
            },
          },
          "severity": "Error",
          "side": "",
          "type": "Runtime",
        },
      ],
      "type": "errors",
    }
  }
/>
`;

exports[`Repl renders correctly 1`] = `
<Repl
  externalLibrary="NONE"
  handleBrowseHistoryDown={[Function]}
  handleBrowseHistoryUp={[Function]}
  handleReplEval={[Function]}
  handleReplOutputClear={[Function]}
  handleReplValueChange={[Function]}
  output={
    [
      {
        "consoleLogs": [],
        "type": "result",
        "value": 42,
      },
      {
        "type": "code",
        "value": "display('');",
      },
      {
        "consoleLogs": [],
        "errors": [
          TypeError {
            "chapter": 4,
            "expected": "",
            "got": "",
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "start": {
                "column": -1,
                "line": -1,
              },
            },
            "severity": "Error",
            "side": "",
            "type": "Runtime",
          },
        ],
        "type": "errors",
      },
      {
        "consoleLogs": [
          "a",
          "bb",
          "cccccccccccccccccccccccccccccccc",
          "d",
        ],
        "type": "running",
      },
    ]
  }
  replButtons={[]}
  replValue=""
  sourceChapter={1}
  sourceVariant="default"
/>
`;

exports[`Result output (no consoleLogs) renders correctly 1`] = `
<Output
  output={
    {
      "consoleLogs": [],
      "type": "result",
      "value": 42,
    }
  }
/>
`;

exports[`Result output (with consoleLogs) renders correctly 1`] = `
<Output
  output={
    {
      "consoleLogs": [
        "a",
        "bb",
        "cccccccccccccccccccccccccccccccc",
        "d",
      ],
      "type": "result",
      "value": 42,
    }
  }
/>
`;

exports[`Running output renders correctly 1`] = `
<Output
  output={
    {
      "consoleLogs": [
        "a",
        "bb",
        "cccccccccccccccccccccccccccccccc",
        "d",
      ],
      "type": "running",
    }
  }
/>
`;
